# sfork_FastVGGT

./: pyproject.toml
eval/: eval_custom.py  eval_custom_colmap.py
vggt/models/: aggregator.py
