[project]
name = "vggt"  # keeps module import name stable with VGGT

dependencies = [
    # Common dependencies with VGGT (does not specify versions to avoid hard pinning unecessarily)
    "torch",
    "torchvision",
    "numpy",
    "Pillow",
    "huggingface_hub",
    "einops",
    "safetensors",
    "opencv-python",
    # non official but still needed dependencies for VGGT
    "xformers",  # for memory efficient attention
    # "lightglue", # conda dep, not in pypi
    # FastVGGT specific
    "evo",
    "open3d",
    "matplotlib",
    "scipy",
    "scikit-image",
    "tqdm",
    "trimesh",
    "pycolmap",
    "pyceres",
]
version = "0.0.0+fastvggt"
requires-python = ">= 3.10"

# Using setuptools as the build backend
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# setuptools configuration
[tool.setuptools.packages.find]
where = ["."]
include = [
    "vggt*",
    "merging*",
]